--- a/app/src/main/res/layout/activity_planner_main.xml
+++ b/app/src/main/res/layout/activity_planner_main.xml
@@ -87,12 +87,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
+        android:layout_weight="1"/>
 
     <include
         android:id="@+id/bottomNavigation"
