--- a/app/src/main/res/layout/fragment_add_student.xml
+++ b/app/src/main/res/layout/fragment_add_student.xml
@@ -28,7 +28,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="-14dp"
             android:text="Student"
-            android:textColor="@color/colorFont"
+            android:textColor="@color/colorGray"
             android:textSize="40sp"
             android:textStyle="bold" />
 
@@ -97,7 +97,7 @@
                     android:layout_weight="0.4"
                     android:gravity="center|start"
                     android:text="Class delegate?"
-                    android:textColor="@color/colorFont"
+                    android:textColor="@color/colorGray"
                     android:textSize="16sp" />
 
                 <ToggleButton
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Select a course"
-                android:textColor="@color/colorFont"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp" />
 
             <Spinner
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Select a discipline"
-                android:textColor="@color/colorFont"
+                android:textColor="@color/colorGray"
                 android:textSize="16sp" />
 
             <Spinner
