--- a/app/src/main/res/menu/menu_bottom_register_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_register_navigation.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/ic_home"
-        android:icon="@drawable/ic_seta_voltar_24dp"
+        android:icon="@drawable/logo_geral"
         android:title="Home" />
 
     <item android:id="@+id/ic_pesquisa"
@@ -17,6 +17,10 @@
     <item android:id="@+id/ic_perfil"
         android:icon="@drawable/ic_seta_voltar_24dp"
         android:title="Perfil" />
+
+    <item android:id="@+id/ic_config"
+        android:icon="@drawable/ic_seta_voltar_24dp"
+        android:title="Config" />
 
 
 </menu>
