--- a/app/src/main/res/layout-v21/lista_recycle_disciplines.xml
+++ b/app/src/main/res/layout-v21/lista_recycle_disciplines.xml
@@ -3,22 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:background="@color/colorBackGroundBrown"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackGroundBrown"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:orientation="vertical"
             android:paddingStart="10dp">
+
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="Discipline Name:"
+                android:textColor="@color/colorBright"
+                android:textSize="10sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/nameDiscipline"
@@ -27,8 +38,7 @@
                 android:layout_weight="4"
                 android:text="nameDiscipline"
                 android:textColor="@color/colorBright"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,53 +47,106 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/acronDiscipline"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textView33"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="acronDiscipline"
-                    android:textColor="@color/colorBright" />
+                    android:text="Acronym"
+                    android:textColor="@color/colorBright"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/acronDiscipline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.08"
+                    android:text="acron"
+                    android:textColor="@color/colorBright"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/textView28"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.1"
+                    android:text="Year: "
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorBright"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/disciplineYear"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
+                    android:layout_weight="1.1"
                     android:text="2019"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="viewStart"
                     android:textColor="@color/colorBright"
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/disciplineSemester"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textView29"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:text="2-Second"
-                    android:textAlignment="textEnd"
+                    android:layout_weight="1"
+                    android:text="Semester: "
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/colorBright"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/disciplineSemester"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="1/2019"
                     android:textColor="@color/colorBright"
                     android:textSize="12sp" />
+
             </LinearLayout>
 
             <TextView
-                android:id="@+id/nameUniversity"
+                android:id="@+id/textView31"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:text="University Name:"
+                android:textColor="@color/colorBright"
+                android:textSize="10sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/nameUniversity"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="nameUniversity"
                 android:textColor="@color/colorBright"
-                android:textSize="12sp"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textView32"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:paddingTop="10dp"
+                android:text="Course name:"
+                android:textColor="@color/colorBright"
+                android:textSize="10sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/nameCourse"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="nameCourse"
                 android:textColor="@color/colorBright"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -92,8 +155,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_edit_white_24dp" />
 
         <ImageView
@@ -101,8 +164,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_delete_white_24dp" />
     </LinearLayout>
 </LinearLayout>
