--- a/app/src/main/res/layout/fragment_add_course.xml
+++ b/app/src/main/res/layout/fragment_add_course.xml
@@ -1,92 +1,166 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="visible"
-    tools:context="fragment.AddCourseFragment"
-    tools:visibility="visible">
+    tools:context="fragment.AddCourseFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="add new"
-            android:textColor="@color/colorBright"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="-14dp"
-            android:text="Courses"
-            android:textColor="@color/colorGray"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <LinearLayout
-            android:layout_width="319dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Courses"
+                    android:textColor="@color/colorGray"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="-10dp"
+                    android:text="add new"
+                    android:textColor="@color/colorBright"
+                    android:textSize="14sp" />
+
+                <View
+                    android:id="@+id/divider11"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="?android:attr/listDivider" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/backToAddEditMain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+                android:gravity="center"
+                android:paddingTop="20dp"
+                android:text="back"
+                android:textColor="@color/colorBright"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <EditText
                 android:id="@+id/courseName"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="course name"
                 android:inputType="textPersonName"
-                android:paddingStart="10dp"
-                android:textSize="16sp"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
                 android:theme="@style/editTextPadrao" />
 
             <EditText
                 android:id="@+id/courseAcronym"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="acronym"
                 android:inputType="textPersonName"
-                android:paddingStart="10dp"
-                android:textSize="16sp"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
                 android:theme="@style/editTextPadrao" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:text="Select an university"
                 android:textColor="@color/colorGray"
-                android:textSize="16sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                 android:id="@+id/spinnerUniversity"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:dropDownWidth="wrap_content"
+                android:ems="10"
                 android:outlineSpotShadowColor="@color/colorGray" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:text="Administrative Contact Person"
+                android:textColor="@color/colorGray"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/adminName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="admin person name"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
+
+            <EditText
+                android:id="@+id/adminEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="admin person e-mail"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
 
             <Button
                 android:id="@+id/buttonCourse"
@@ -97,17 +171,7 @@
                 android:text="ADD"
                 android:theme="@style/botaoPadraoGreen" />
 
-            <TextView
-                android:id="@+id/backText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:text="back to main Courses page"
-                android:textAlignment="center" />
-
         </LinearLayout>
 
     </LinearLayout>
-
 </FrameLayout>
