--- a/app/src/main/res/layout/fragment_add_discipline.xml
+++ b/app/src/main/res/layout/fragment_add_discipline.xml
@@ -9,61 +9,93 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="add new"
-            android:textColor="@color/colorBright"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="-14dp"
-            android:text="Discipline"
-            android:textColor="@color/colorGray"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <LinearLayout
-            android:layout_width="319dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Discipline"
+                    android:textColor="@color/colorGray"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="-10dp"
+                    android:text="add new"
+                    android:textColor="@color/colorBright"
+                    android:textSize="14sp" />
+
+                <View
+                    android:id="@+id/divider6"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:background="?android:attr/listDivider" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/backToAddEditMain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_seta_voltar_24dp"
+                android:gravity="center"
+                android:paddingTop="20dp"
+                android:text="back"
+                android:textColor="@color/colorBright"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <EditText
                 android:id="@+id/disciplineName"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="discipline name"
                 android:inputType="textPersonName"
-                android:paddingStart="10dp"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
                 android:textSize="14sp"
                 android:theme="@style/editTextPadrao" />
 
             <EditText
                 android:id="@+id/acronymDiscipline"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="acronym"
                 android:inputType="textPersonName"
-                android:paddingStart="10dp"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
                 android:textSize="14sp"
                 android:theme="@style/editTextPadrao" />
 
@@ -74,17 +106,19 @@
                 android:layout_marginTop="20dp"
                 android:text="Select an university / course:"
                 android:textColor="@color/colorGray"
-                android:textSize="16sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                 android:id="@+id/spinnerUniversity"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_edit_text"
                 android:dropDownWidth="wrap_content"
-                android:outlineSpotShadowColor="@color/colorGray" />
+                android:outlineSpotShadowColor="@color/colorGray"
+                android:padding="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -96,7 +130,7 @@
                 <EditText
                     android:id="@+id/disciplineYear"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="30dp"
                     android:layout_weight="1"
@@ -104,7 +138,8 @@
                     android:ems="10"
                     android:hint="year"
                     android:inputType="textPersonName"
-                    android:paddingStart="10dp"
+                    android:padding="10dp"
+                    android:textColorHint="@color/colorLightGray"
                     android:textSize="14sp"
                     android:theme="@style/editTextPadrao" />
 
@@ -141,9 +176,51 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorGray"
                         android:textSize="10sp" />
+
                 </LinearLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView22"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:text="Student contact:"
+                android:textColor="@color/colorGray"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/studentName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="student name"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
+
+            <EditText
+                android:id="@+id/studentEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/bg_edit_text"
+                android:ems="10"
+                android:hint="student e-mail"
+                android:inputType="textPersonName"
+                android:padding="10dp"
+                android:textColorHint="@color/colorLightGray"
+                android:textSize="14sp"
+                android:theme="@style/editTextPadrao" />
 
             <Button
                 android:id="@+id/buttonDisciplines"
@@ -154,16 +231,8 @@
                 android:text="ADD"
                 android:theme="@style/botaoPadraoGreen" />
 
-            <TextView
-                android:id="@+id/backText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:text="back to main Disciplines page"
-                android:textAlignment="center" />
-
         </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
