--- a/app/src/main/res/layout/lista_recycle_universities.xml
+++ b/app/src/main/res/layout/lista_recycle_universities.xml
@@ -8,23 +8,21 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/colorBackGroundBrown"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:orientation="vertical"
-            android:paddingStart="10dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/nameUni"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
                 android:text="nameUni"
                 android:textColor="@color/colorBright"
                 android:textSize="16sp"
@@ -34,7 +32,6 @@
                 android:id="@+id/acronUni"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="acronUni"
                 android:textColor="@color/colorBright" />
         </LinearLayout>
@@ -44,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="0.2"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_edit_white_24dp" />
 
         <ImageView
@@ -53,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="0.2"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_delete_white_24dp" />
     </LinearLayout>
 </LinearLayout>
