--- a/app/src/main/res/menu/menu_bottom_register_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_register_navigation.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/ic_home"
-        android:icon="@drawable/logo_geral"
+    <item
+        android:id="@+id/ic_home"
+        android:icon="@drawable/ic_seta_voltar_24dp"
         android:title="Home" />
 
     <item android:id="@+id/ic_pesquisa"
