--- a/app/src/main/res/layout-v21/lista_recycle_courses.xml
+++ b/app/src/main/res/layout-v21/lista_recycle_courses.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:background="@color/colorBackGroundBrown"
     android:orientation="vertical">
 
@@ -11,10 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackGroundBrown"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:orientation="vertical"
@@ -54,8 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_edit_white_24dp" />
 
         <ImageView
@@ -63,8 +64,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:layout_weight="0.3"
-            android:scaleType="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_delete_white_24dp" />
     </LinearLayout>
 </LinearLayout>
