--- a/app/src/main/res/layout/fragment_add_university.xml
+++ b/app/src/main/res/layout/fragment_add_university.xml
@@ -78,6 +78,7 @@
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="university name"
+                android:textColorHint="@color/colorLightGray"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
                 android:textSize="16sp"
@@ -92,6 +93,7 @@
                 android:background="@drawable/bg_edit_text"
                 android:ems="10"
                 android:hint="university acronym"
+                android:textColorHint="@color/colorLightGray"
                 android:inputType="textPersonName"
                 android:paddingStart="10dp"
                 android:textSize="16sp"
