--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="activity.CreateAccountActivity">
+    tools:context=".activity.CreateAccountActivity">
 
     <ImageView
         android:id="@+id/fundoLogin"
