--- a/app/src/main/res/layout/activity_planner_main.xml
+++ b/app/src/main/res/layout/activity_planner_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackGroundBrown"
     android:orientation="vertical"
-    tools:context="activity.PlannerMainActivity">
+    tools:context=".activity.PlannerMainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
