--- a/app/src/main/res/layout/fragment_adminpeople_main.xml
+++ b/app/src/main/res/layout/fragment_adminpeople_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragment.AdminPeopleMainFragment">
+    tools:context=".fragment.AdminPeopleMainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
