--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -55,7 +55,7 @@
                     android:typeface="sans" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/textViewEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Customize System Parameters"
