--- a/app/src/main/res/layout/content_nav_main.xml
+++ b/app/src/main/res/layout/content_nav_main.xml
@@ -8,4 +8,14 @@
     tools:context=".activity.NavMainActivity"
     tools:showIn="@layout/app_bar_nav_main">
 
+    <TextView
+        android:id="@+id/txtCards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CARDS"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
