--- a/app/src/main/res/menu/activity_nav_main_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_main_drawer.xml
@@ -17,21 +17,21 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="@string/action_settings" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Next...">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_about"
                 android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:title="About" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:title="Logout" />
         </menu>
     </item>
 
